--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,9 +15,11 @@ jobs:
       run: sudo apt-get update && sudo apt-get install -y
 
     - name: Set up Rust
-      uses: rust-build/rust-build.action@v1.4.5
+      uses: houseabsolute/actions-rust-cross@v0
       with:
-        rust-version: stable
+        target: arm-unknown-linux-gnueabihf
+        args: "--locked --release"
+        strip: true
 
     - name: Add arm64 target
       run: rustup target add aarch64-unknown-linux-gnu
