--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,7 +12,9 @@ jobs:
       uses: actions/checkout@v2
       
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install -y
+      run: |
+        sudo apt-get update && sudo apt-get install -y
+        sudo apt-get install -y libasound2-dev
 
     - name: Set up Rust
       uses: houseabsolute/actions-rust-cross@v0
