--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -14,7 +14,9 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update && sudo apt-get install -y
+        sudo dpkg --add-architecture arm64
         sudo apt-get install -y libasound2-dev portaudio19-dev build-essential libpulse-dev libdbus-1-dev librust-alsa-sys-dev
+        sudo apt install -y librust-alsa-sys-dev:arm64 libasound2-dev:arm64
 
     - name: Set up Rust
       uses: houseabsolute/actions-rust-cross@v0
